# coreml_rustc

./: Cargo.toml  Readme.md  optimized.js  optimized2.js  sources.cm  test.js  test_page.html  typesystem_idea.md
.github/workflows/: playground_build.yml
coreml_runtime_wasm/: Cargo.toml
coreml_runtime_wasm/src/: lib.rs
crates/coreml_rustc/: Cargo.toml
crates/coreml_rustc/src/: lib.rs  parser_libchumsky.rs  secd_machine_code.rs  syntax_tree.rs  transpiler.rs  typeinf.rs
examples/factorial/: Cargo.toml  IR_dump
examples/factorial/src/: main.rs
examples/repl/: Cargo.toml
examples/repl/src/: main.rs
examples/web_demo/: Cargo.toml  index.html
examples/web_demo/src/: lib.rs
src/: alpha_unique.rs  anormalize.rs  ast_transpiler.rs  beta_reduction.rs  closureconversion.rs  codegen_js.rs  compile_ty.rs  error_report.rs  flat_syntax.rs  hir.rs  interpreter.rs  knormalize.rs  lib.rs  machinecode_gen.rs  machinecodegen.rs  main.rs  mincaml_parser.rs  optimize.rs  parser.rs  parser_libchumsky.rs  parser_libnom.rs  record_layout.rs  record_ty.rs  rustcode_gen.rs  secd_machine_code.rs  sml_syntax.rs  syntax_tree.rs  top.rs  transpiler.rs  typed_ast.rs  typeinf.rs  typeinf_errors.rs
