[package]
name = "coreml_rustc"
version = "0.1.0"
edition = "2021"
description = "tiny functional language to rust transpiler"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1"
ariadne = "0.4"
chumsky = { version = "1.0.0-alpha.3", features = ["regex", "label"] }
web-assembler = "0.1"

[workspace]
members = ["examples/factorial", "examples/repl"]
