[package]
name = "web-demo"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
coreml_rustc={git="https://github.com/t18b219k/coreml_rustc.git",branch="master"}
wasm-bindgen = "0.2.37"

[dependencies.web-sys]
version = "0.3.4"
features = ['Document', 'Element', 'HtmlElement','HtmlTextAreaElement','console', 'Node', 'Window']
